2016-11-12 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: removed debugging messages,
    request handling made much simpler after
    ::rivet::inspect changed its behavior when
    a script is undefined
    * src/mod_rivet_ng/rivetInspect.c: changed 
    to an empty string the value returned when
    a configuration script is undefined
    * src/mod_rivet_ng/mod_rivet_common.c: we don't
    need to handle at C level the error handler
    and the request cleanup Tcl scritps: they are
    called from Tcl
    * src/mod_rivet_ng/mod_rivet_generator.c: removed
    code unused by this version of the module

2016-11-11 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.it: further development of the
    url processing procedures allows script level
    overriding of both request handling and error handling
    * src/mod_rivet_ng/rivetCore.c: ::rivet::inspect C code
    argument handling improved

2016-11-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_common.c: the request_rec
    field to be checked in order to determine whether we
    are serving the request is 'header' non 'content_type'.
    This bug didn't surface because their set to the same
    string when a request is handed to the module chain, but
    it's been around ever since.

2016-11-08 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/apache_config.c: fixed conf
    merge that didn't assign the correct cache size
    * rivet/init.tcl: fixed exception scripts checks
    * src/mod_rivet_ng/rivetCore.c: command 'parse -string'
    composes the script and calls directly Tcl_EvalObjEx
    * src/mod_rivet/apache_config.c: fixed same bug
    found in Rivet_MergeConf developing mod_rivet_ng

2016-11-07 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: changed also code
    of command ::rivet::parse, now handling the
    cache and calling directly Tcl
    * src/mod_rivet_ng/mod_rivet_generator.c: now