@@ -10,9 +10,9 @@ namespace eval ::rivet {
     proc try {script args} {
 
         uplevel [list ::try $script trap {RIVET ABORTPAGE} {} {
-            return -errorcode ABORTPAGE -code error
+            return -errorcode {RIVET ABORTPAGE} -code error
         } trap {RIVET THREAD_EXIT} {} {
-            return -errorcode THREAD_EXIT -code error
+            return -errorcode {RIVET THREAD_EXIT} -code error
         } {*}$args]
 
     }
